do not update existing features for now